--- a/Projeto_03/index.html
+++ b/Projeto_03/index.html
@@ -119,6 +119,25 @@
       <div class="clear"></div>
     </section><!--sessao3-->
 
+    <section class="sessao4">
+      <div class="container">
+        
+        <div class="entre-em-contato">
+          <h2>Entre Em Contato</h2>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, nobis, consequatur eveniet ipsam architecto 
+            quam nam non tempora eaque a reiciendis provident molestiae soluta beatae! Incidunt dicta odit consequatur obcaecati!</p>
+
+            <form>
+              <input type="text" name="Nome" id="Nome" placeholder="Nome*">
+              <input type="text" name="Email" id="Email" placeholder="Email*">
+              <textarea name="Mensagem" id="Mensagem" placeholder="Mensagem" cols="40" rows="10"></textarea>
+            </form>
+
+        </div><!--entre-em-contato-->
+
+      </div><!--container-->
+      <div class="clear"></div>
+    </section><!--sessao4-->
 
   </body>
 
