--- a/Projeto_03/index.html
+++ b/Projeto_03/index.html
@@ -130,10 +130,19 @@
             <form>
               <input type="text" name="Nome" id="Nome" placeholder="Nome*">
               <input type="text" name="Email" id="Email" placeholder="Email*">
-              <textarea name="Mensagem" id="Mensagem" placeholder="Mensagem" cols="40" rows="10"></textarea>
+              <textarea name="Mensagem" id="Mensagem" placeholder="Mensagem"></textarea>
+              <div><input type="submit" value="Enviar" placeholder="Enviar"></div>
             </form>
-
         </div><!--entre-em-contato-->
+
+        <div class="map-wraper">
+          <h2>Faça Uma Visita!</h2>
+          <div class="map-wraper2">
+            <div class="map-wraper3">
+              <div id="map" class="map"></div><!--map-->
+            </div><!--map-wraper3-->
+          </div><!--map-wraper2-->
+        </div><!--map-wraper-->
 
       </div><!--container-->
       <div class="clear"></div>
