--- a/Projeto_03/index.html
+++ b/Projeto_03/index.html
@@ -148,6 +148,14 @@
       <div class="clear"></div>
     </section><!--sessao4-->
 
+    <footer>
+      <div class="container">
+        <p>Todos os direitos reservados</p>
+        <p>contato@contato.com</p>
+        <div class="clear"></div>
+      </div><!--container-->
+    </footer>
+
   </body>
 
 </html>
