--- a/Projeto_03/index.html
+++ b/Projeto_03/index.html
@@ -139,7 +139,10 @@
           <h2>Faça Uma Visita!</h2>
           <div class="map-wraper2">
             <div class="map-wraper3">
-              <div id="map" class="map"></div><!--map-->
+
+              <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"  class="map" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=Afonso%20Ferreira%20S%C3%A3o%20Paulo+(Mapa)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> <a href='http://maps-generator.com/pt'>http://maps-generator.com/pt</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=b26e9d1a71e1b3b04b419e801824522ebbecaa64'></script>
+
+              
             </div><!--map-wraper3-->
           </div><!--map-wraper2-->
         </div><!--map-wraper-->
